--- a/百度百科.html
+++ b/百度百科.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <title>你的名字百度百科</title>
 </head>
-<body style="text-align:center" background="https://s1.ax1x.com/2020/05/05/YFxGoq.jpg">
+<body style="text-align:center" background="https://s1.ax1x.com/2020/05/05/YFxGoq.jpg"><!--设置背景图片-->>
     <h1 style="text-align:center" style="font-size: 200px;">你的名字</h1>
-    <video  width="800" height="500" autoplay="autoplay" controls="controls">
-        <source src="F:\coming\coming\your name.mp4" type="video/mp4"></source>
-    </video>>
+    <video width="520" height="340" controls>
+        <source src="F:\coming\coming\your name.mp4" type="video/mp4">
+    </video>
+    
+    <!--以下是基本信息介绍-->
     <h2>基本信息</h2>
     <p>
         《你的名字。》是由<span style="color:rgb(214, 105, 72)">新海诚</span>执导，由神木隆之介、上白石萌音担任主要配音的一部原创日本动画电影 [1]  。
         作品于2016年8月26日在日本上映。中国内地于2016年12月2日上映。作品讲述了男女高中生在梦中相遇，并寻找彼此的故事。
         <span style="color:rgb(214, 105, 72)">北京时间2017年8月26日零点</span>于中国大陆的PPTV、bilibili、爱奇艺、优酷网络首播。
     </p>
+    <!--以下是基本信息介绍-->
     <h2>剧情简介</h2>
     <p>
         故事发生的地点是在每千年回归一次的彗星造访过一个月之前，日本飞驒市的乡下小町糸守町。
