--- a/百度百科.html
+++ b/百度百科.html
@@ -6,9 +6,7 @@
 </head>
 <body style="text-align:center" background="https://s1.ax1x.com/2020/05/05/YFxGoq.jpg"><!--设置背景图片-->>
     <h1 style="text-align:center" style="font-size: 200px;">你的名字</h1>
-    <video width="520" height="340" controls>
-        <source src="F:\coming\coming\your name.mp4" type="video/mp4">
-    </video>
+    <iframe height=340 width=520 src='https://player.youku.com/embed/XNDY2MjEzNTUyOA==' frameborder=0 'allowfullscreen'></iframe>
     
     <!--以下是基本信息介绍-->
     <h2>基本信息</h2>
