--- a/练习.html
+++ b/练习.html
@@ -56,16 +56,16 @@
 <div id="main">
     <div id="left">
         <table>
-            <tr><td><a href="F:\wangye\基本信息.html" target="bj">基本信息</a></td></tr>
-            <tr><td><a href="F:\wangye\剧情简介.html" target="bj">剧情简介</a></td></tr>
-            <tr><td><a href="F:\wangye\角色介绍.html" target="bj">角色介绍</a></td></tr>
+            <tr><td><a href="https://zhouyue409.github.io/coming/%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF.html" target="bj">基本信息</a></td></tr>
+            <tr><td><a href="https://zhouyue409.github.io/coming/%E5%89%A7%E6%83%85%E7%AE%80%E4%BB%8B.html" target="bj">剧情简介</a></td></tr>
+            <tr><td><a href="https://zhouyue409.github.io/coming/%E8%A7%92%E8%89%B2%E4%BB%8B%E7%BB%8D.html" target="bj">角色介绍</a></td></tr>
             <tr><td>剧组人员</td></tr>
             <tr><td>剧照</td></tr>
             <tr><td>动画音乐</td></tr>
         </table>
     </div>
     <div id="right">
-        <iframe src="F:\wangye\right.html" width="785" height="470" name="bj" scrolling="yes" frameborder="0"></iframe>
+        <iframe src="https://zhouyue409.github.io/coming/right.html" width="785" height="470" name="bj" scrolling="yes" frameborder="0"></iframe>
      </div>
 </div>
 <footer>Copyright@版权所有</footer>
