--- a/练习.html
+++ b/练习.html
@@ -65,7 +65,7 @@
         </table>
     </div>
     <div id="right">
-        <iframe src="https://zhouyue409.github.io/coming/right.html" width="785" height="470" name="bj" scrolling="yes" frameborder="0"></iframe>
+        <iframe src="https://zhouyue409.github.io/coming/your%20name.mp4" width="785" height="470" name="bj" scrolling="yes" frameborder="0"></iframe>
      </div>
 </div>
 <footer>Copyright@版权所有</footer>
