--- a/练习.html
+++ b/练习.html
@@ -59,8 +59,7 @@
             <tr><td><a href="https://zhouyue409.github.io/coming/%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF.html" target="bj">基本信息</a></td></tr>
             <tr><td><a href="https://zhouyue409.github.io/coming/%E5%89%A7%E6%83%85%E7%AE%80%E4%BB%8B.html" target="bj">剧情简介</a></td></tr>
             <tr><td><a href="file:///F:/coming/coming/%E8%A7%92%E8%89%B2%E4%BB%8B%E7%BB%8D.html" target="bj">角色介绍</a></td></tr>
-            <tr><td>剧组人员</td></tr>
-            <tr><td>剧照</td></tr>
+            <!-- <tr><td><a href="" target="bj">剧照</a></td></tr> -->
             <tr><td>动画音乐</td></tr>
         </table>
     </div>
