--- a/练习.html
+++ b/练习.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8" /> 
 <title>君の名は 百度百科</title> 
 <style> 
+    img{
+        width:200px;
+        height:160px;
+        border:2px solid #f2f2f2;
+    }
     header,footer,#main{
         margin:auto;
         width:950px;
@@ -65,7 +70,8 @@
     </div>
     <div id="right">
         <iframe src="https://zhouyue409.github.io/coming/your%20name.mp4" width="785" height="470" name="bj" scrolling="yes" frameborder="0"></iframe>
-     </div>
+        
+    </div>
 </div>
 <footer>Copyright@版权所有</footer>
 </body> 
