--- a/练习.html
+++ b/练习.html
@@ -3,6 +3,7 @@
 <head> 
 <meta charset="utf-8" /> 
 <title>君の名は 百度百科</title> 
+<!--CSS设置-->
 <style> 
     img{
         width:200px;
@@ -57,7 +58,7 @@
 </head> 
 
 <body> 
-<header>君の名は</header>
+<header>君の名は</header> 
 <div id="main">
     <div id="left">
         <table>
@@ -65,7 +66,7 @@
             <tr><td><a href="https://zhouyue409.github.io/coming/%E5%89%A7%E6%83%85%E7%AE%80%E4%BB%8B.html" target="bj">剧情简介</a></td></tr>
             <tr><td><a href="https://zhouyue409.github.io/coming/%E8%A7%92%E8%89%B2%E4%BB%8B%E7%BB%8D.html" target="bj">角色介绍</a></td></tr>
             <tr><td><a href="https://zhouyue409.github.io/coming/%E5%89%A7%E7%85%A7.html" target="bj">剧照</a></td></tr>
-            <tr><td>动画音乐</td></tr>
+            <tr><td><a href="" target="bj"></a>动画音乐</td></tr>
         </table>
     </div>
     <div id="right">
