--- a/基本信息.html
+++ b/基本信息.html
@@ -7,10 +7,38 @@
 <body>
     <h2>基本信息</h2>
     
-    <p>
+    <p >
         《你的名字。》是由<span style="color:rgb(214, 105, 72)">新海诚</span>执导，由神木隆之介、上白石萌音担任主要配音的一部原创日本动画电影 [1]  。
         作品于2016年8月26日在日本上映。中国内地于2016年12月2日上映。作品讲述了男女高中生在梦中相遇，并寻找彼此的故事。
         <span style="color:rgb(214, 105, 72)">北京时间2017年8月26日零点</span>于中国大陆的PPTV、bilibili、爱奇艺、优酷网络首播。
     </p>
+    <p >
+        导演 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://baike.baidu.com/item/%E6%96%B0%E6%B5%B7%E8%AF%9A/2722278?fr=aladdin" title="新海诚百度百科" target="_blank">新海诚</a><br />
+        <hr / style="border-top:2px dotted gray">
+        编剧 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;新海诚<br />
+        <hr / style="border-top:2px dotted gray">
+        主演 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;神木隆之介，上白石萌音<br />
+        <hr / style="border-top:2px dotted gray">
+        制片人 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;武井克弘，伊藤耕一郎<br />
+        <hr / style="border-top:2px dotted gray">
+        出品公司 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;东宝<br />
+        <hr / style="border-top:2px dotted gray">
+        中文名 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;你的名字<br />
+        <hr / style="border-top:2px dotted gray">
+        外文名 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;君の名は<br />
+        <hr / style="border-top:2px dotted gray">
+        其它译名 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;your name<br />
+        <hr / style="border-top:2px dotted gray">
+        出品时间 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016年<br />
+        <hr / style="border-top:2px dotted gray">
+        发行公司 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;东宝国际<br />
+        <hr / style="border-top:2px dotted gray">
+        制片地区 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日本<br />
+        <hr / style="border-top:2px dotted gray">
+        拍摄地点 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日本<br />
+        <hr / style="border-top:2px dotted gray">
+        色彩 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;彩色<br />
+    </p>
     
 </body>
+</html>
