--- a/剧情简介.html
+++ b/剧情简介.html
@@ -7,7 +7,7 @@
 <body>
 <h2>剧情简介</h2>
     <p>
-        故事发生的地点是在每千年回归一次的彗星造访过一个月之前，日本飞驒市的乡下小町糸守町。
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;故事发生的地点是在每千年回归一次的彗星造访过一个月之前，日本飞驒市的乡下小町糸守町。
         在这里女高中生三叶每天都过着忧郁的生活，而她烦恼的不光有担任町长的父亲所举行的选举运动，
         还有家传神社的古老习俗。在这个小小的町，周围都只是些爱瞎操心的老人。
         为此三叶对于大都市充满了憧憬。 然而某一天，自己做了一个变成男孩子的梦。这里有着陌生的房间、陌生的朋友。
