--- a/基本信息.html
+++ b/基本信息.html
@@ -5,8 +5,9 @@
     <title>基本信息</title>
 </head>
 <body>
-    <h2>基本信息</h2>
-    
+    <h2 align="center"><a name="mj3"></a>基本信息概括</h2>
+    <p align="center"><a href="#mj1">基本信息</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#mj2">创作来源</a></p>
+    <p><a name="mj1"></a>基本信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#mj3">返回顶部</a></p>
     <p >
         《你的名字。》是由<span style="color:rgb(214, 105, 72)">新海诚</span>执导，由神木隆之介、上白石萌音担任主要配音的一部原创日本动画电影 [1]  。
         作品于2016年8月26日在日本上映。中国内地于2016年12月2日上映。作品讲述了男女高中生在梦中相遇，并寻找彼此的故事。
@@ -39,6 +40,16 @@
         <hr / style="border-top:2px dotted gray">
         色彩 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;彩色<br />
     </p>
-    
+    <p><a name="mj2"></a>创作来源&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#mj3">返回顶部</a></p>
+    <p >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;该作的宣传口号是“寻找未曾见过的你”。
+        这种在相隔遥远土地上生活的少年和少女的相遇，是新海诚2014年制作的Z会CM《十字路口》中得到的启发。
+        另外，创作灵感来源于两个日本古典，小野小町的和歌“梦里相逢人不见，若知是梦何须醒。纵然梦里常幽会，怎比真如见一回。
+        （思ひつつ寝ればや人の见えつらむ梦と知りせば覚めざらましを。）”（《古今和歌集》）和《とりかへばや物语》里的设定“男子像女儿一样养育，
+        女子像儿子一样养育”。</p>
+    <p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;新海诚还表示在尊重1950年代的爱情电影《你的名字》和大林宣彦导演的男女换身体情节为主题的电影《转校生》的同时做了这部电影，
+        但《转校生》中描写的性别转换不适合现在的时代，所以决定不考虑加入性别转换的装置。与《转校生》和《乱马1/2》不同，
+        《你的名字。》中男女主角在意的不是自己的性别转换，而是对另一个人的事感到烦恼。
+    </p>
 </body>
 </html>
