--- a/练习.html
+++ b/练习.html
@@ -2,6 +2,7 @@
 <html> 
 <head> 
 <meta charset="utf-8" /> 
+<link rel="icon" href="F:\coming\coming\favicon.ico" type="image/x-icon">
 <title>君の名は 百度百科</title> 
 <!--CSS设置-->
 <style> 
@@ -36,10 +37,12 @@
         padding-top: 100px;
     }
     #right{
+        
         float:right;
+        
         width:785px;
         height:470px;
-        background-color:honeydew;
+        background-color:rgb(238, 232, 234); 
     }
     footer{
         height:40px;
