--- a/练习.html
+++ b/练习.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
 <meta charset="utf-8" /> 
-<link rel="icon" href="F:\coming\coming\favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://zhouyue409.github.io/coming/favicon.ico" type="image/x-icon">
 <title>君の名は 百度百科</title> 
 <!--CSS设置-->
 <style> 
